--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.17.3",
     "axios": "^1.7.2",
     "eslint-config-airbnb": "^19.0.4",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -24,6 +25,7 @@
     "vite": "^5.2.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
