--- a/package.json
+++ b/package.json
@@ -7,40 +7,47 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
+    "@reduxjs/toolkit": "^2.3.0",
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "antd": "^5.17.3",
-    "axios": "^1.7.2",
-    "eslint-config-airbnb": "^19.0.4",
+    "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "lodash": "^4.17.21",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.27.0",
     "uuid": "^9.0.1",
-    "vite": "^5.2.11"
+    "vite": "^5.4.8",
+    "vite-plugin-sass-dts": "^1.3.29"
   },
   "devDependencies": {
+    "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
+    "@eslint/js": "^9.12.0",
+    "@feature-sliced/eslint-config": "^0.1.1",
     "@types/lodash": "^4.17.7",
-    "@types/react": "^18.3.2",
+    "@types/node": "^22.7.5",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "^7.10.0",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "gh-pages": "^6.1.1",
-    "sass": "^1.77.2",
-    "typescript": "^5.4.5"
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "gh-pages": "^6.2.0",
+    "globals": "^15.9.0",
+    "sass": "^1.79.5",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.7.0"
   }
 }
